# ParolaGucuAnalizProgrami

./: CMakeLists.txt  README.md  README.txt  mainwindow.cpp  mainwindow.h
